# atari_reproduction

./: .gitignore  analysis_results.md  gym.py  main.py  model.py  plot_all_comparisons.py  plot_training_results.py  pyproject.toml  replay_buffer.py  report.tex  requirements.txt  train.py  train_all_models.py  train_all_models.sh
checkpoints_10k/: base_logs.json  dueling_logs.json  dueling_mha_final.pt  dueling_mha_logs.json  mha_final.pt  mha_logs.json
code/: continue_all_models.py  extract_tensorboard.py  gym.py  train.py
models/: __init__.py  base_dqn.py  dueling_dqn.py  dueling_mha_dqn.py  mha_dqn.py  mha_v2_dqn.py
report/: report.aux  report.fdb_latexmk  report.fls  report.out  report.tex  report.tex.bak  reportReformatted
runs/breakout_base/: events.out.tfevents.1765570982.MacBook-Pro-23.local.69816.0  events.out.tfevents.1765571105.MacBook-Pro-23.local.70527.0  events.out.tfevents.1765571142.MacBook-Pro-23.local.70759.0  events.out.tfevents.1765571303.MacBook-Pro-23.local.71266.0
